# tool-sync

./: Cargo.toml
src/: completion.rs  install.rs  lib.rs
src/config/: toml.rs
src/infra/: client.rs
src/model/: asset_name.rs  os.rs  release.rs  repo.rs  tool.rs
src/sync/: archive.rs  configure.rs  db.rs  download.rs  install.rs  mod.rs  prefetch.rs  progress.rs
