[package]
name = "tool-sync"
version = "0.2.0"
authors = ["Dmitrii Kovanikov <kovanikov@gmail.com>"]
license = "MPL-2.0"
description = """
tool-sync is a CLI tool that manages installation of other CLI tools from GitHub
Releases by downloading binaries and storing them in a local directory.
"""
readme = "README.md"
homepage = "https://github.com/chshersh/tool-sync"
repository = "https://github.com/chshersh/tool-sync"
keywords = ["cli", "sync", "download", "tools"]
categories = ["command-line-utilities"]
edition = "2024"

[[bin]]
name = "tool"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
ureq = { version = "2.12.1", features = ["json"] }
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }

clap_complete = "4.5.45"
console = "0.15.10"
dirs = "5.0.1"
indicatif = "0.17.11"
shellexpand = "3.1.0"
tar = "0.4.43"
tempdir = "0.3.7"
toml = "0.8.20"
deko = { version = "0", default-features = false, features = ["flate2", "xz"] }
